--- a/webapp-service/package.json
+++ b/webapp-service/package.json
@@ -9,8 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.2.1",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
+		"mobx": "^6.7.0",
+		"mobx-react": "^7.6.0",
 		"next": "13.0.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
