--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,30 @@
 version: "3.9"
-
 services:
-  # auth
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    restart: unless-stopped
+
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+
+    ports:
+      - "27017:27017"
+
+    volumes:
+        - ./data/mongodb:/data/db
+
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    depends_on:
+      - "mongodb"
+    restart: unless-stopped
+
+    ports:
+      - "8082:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://admin:password@mongodb:27017/
