--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   mongodb:
-    image: mongo:latest
+    image: "mongo:latest"
     container_name: mongodb
     restart: unless-stopped
 
@@ -13,10 +13,10 @@ services:
       - "27017:27017"
 
     volumes:
-        - ./data/mongodb:/data/db
+      - ./data/mongodb:/data/db
 
   mongo-express:
-    image: mongo-express:latest
+    image: "mongo-express:latest"
     container_name: mongo-express
     depends_on:
       - "mongodb"
@@ -25,6 +25,48 @@ services:
     ports:
       - "8082:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_URL: mongodb://admin:password@mongodb:27017/
+      ME_CONFIG_MONGODB_ADMINUSERNAME: "admin"
+      ME_CONFIG_MONGODB_ADMINPASSWORD: "password"
+      ME_CONFIG_MONGODB_URL: "mongodb://admin:password@mongodb:27017/"
+
+# TODO: check the volumes behaviour for auth-db and supertokens
+  auth-db:
+    image: "postgres:latest"
+    environment:
+      POSTGRES_USER: supertokens_user
+      POSTGRES_PASSWORD: somePassword
+      POSTGRES_DB: supertokens
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./data/authDB/postgresql:/var/lib/postgresql
+    networks:
+      - app_network
+    restart: unless-stopped
+    healthcheck:
+      test: [ 'CMD', 'pg_isready -U supertokens_user' ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  supertokens:
+    image: "registry.supertokens.io/supertokens/supertokens-postgresql:4.2"
+    depends_on:
+      - auth-db
+    ports:
+      - "3567:3567"
+    environment:
+      POSTGRESQL_CONNECTION_URI: "postgresql://supertokens_user:somePassword@auth-db:5432/supertokens"
+    networks:
+      - app_network
+    restart: unless-stopped
+    healthcheck:
+      test: >
+        bash -c 'exec 3<>/dev/tcp/127.0.0.1/3567 && echo -e "GET /hello HTTP/1.1\r\nhost: 127.0.0.1:3567\r\nConnection: close\r\n\r\n" >&3 && cat <&3 | grep "Hello"'
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+networks:
+    app_network:
+      driver: bridge
