1. Added logging 2. Added roles (still need to implement automatic roles assignment and create functions to add roles to sessions)

--- a/config.yaml
+++ b/config.yaml
@@ -20,4 +20,8 @@ MONGODB:
   MONGODB_HOST: "localhost"
   MONGODB_PORT: "27017"
 #-------------------------------------------------------------------------------#
+LOGGER:
+  LOGGER_NAME: "tumai-space-global"
+  LOG_LEVEL: "DEBUG"
+#-------------------------------------------------------------------------------#
 # API:
