--- a/auth-web-app/package.json
+++ b/auth-web-app/package.json
@@ -6,15 +6,15 @@
         "start": "next start"
     },
     "dependencies": {
-        "next": "latest",
+        "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "supertokens-auth-react": "latest",
         "supertokens-node": "latest"
     },
     "devDependencies": {
-        "@types/react": "18.0.17",
         "@types/node": "18.7.13",
+        "@types/react": "18.0.17",
         "typescript": "^4.8.2"
     }
 }
