--- a/auth-web-app/package.json
+++ b/auth-web-app/package.json
@@ -9,8 +9,9 @@
         "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "supertokens-auth-react": "latest",
-        "supertokens-node": "latest"
+        "supertokens-auth-react": "^0.30.2",
+        "supertokens-node": "^12.1.5",
+        "supertokens-web-js": "^0.4.0"
     },
     "devDependencies": {
         "@types/node": "18.7.13",
