--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -2,10 +2,10 @@
 FROM node:18-alpine AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY package.json yarn.lock ./
+COPY package.json package-lock.json ./
 RUN yarn install --frozen-lockfile
-RUN yarn install
-RUN yarn add next
+RUN npm install
+RUN npm install next
 
 COPY . /app/
 
@@ -13,4 +13,5 @@ EXPOSE 4000
 
 ENV PORT 4000
 
-CMD ["yarn", "dev"]
+RUN npm install next
+CMD ["npm", "run", "dev"]
