--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,9 +14,9 @@
 		"eslint-config-next": "13.0.6",
 		"mobx": "^6.7.0",
 		"mobx-react": "^7.6.0",
-		"next": "13.0.6",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"next": "^13.2.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^4.7.1"
 	},
 	"devDependencies": {
