install supertokens on frontend

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -1,30 +1,32 @@
+---
 #-------------------------------------------------------------------------------#
 APPLICATION:
-  APP_NAME: "TUM.ai Space"
-  API_FRAMEWORK_NAME: "fastapi"
-  FASTAPI_RUNNING_PROTOCOL: "asgi" # set "wsgi" if running via gunicorn
+    APP_NAME: 'TUM.ai Space'
+    API_FRAMEWORK_NAME: 'fastapi'
+    FASTAPI_RUNNING_PROTOCOL: 'asgi' # set "wsgi" if running via gunicorn
 #-------------------------------------------------------------------------------#
 AUTH:
-  AUTH_API_BASE_PATH: "/auth"
-  API_DOMAIN: "http://api.tum-ai-dev.com:15900"
-  AUTH_WEBSITE_BASE_PATH: "/auth"
-  AUTH_WEBSITE_DOMAIN: "http://auth.tum-ai-dev.com:15900"
-  AUTH_CORE_INSTANCE: "http://super.tokens:3567"
-  AUTH_ALLOWED_ORIGINS:
-    # Should contain AUTH_WEBSITE_DOMAIN
-    # TODO: make reference to AUTH_WEBSITE_DOMAIN
-    - "http://space.tum-ai-dev.com:15950"
-    - "http://space.tum-ai-dev.com:3000"
-    - "http://auth.tum-ai-dev.com:15950"
-    - "http://auth.tum-ai-dev.com:3000"
-  USERS_DASHBOARD_API_KEY: "someApiKey"
+    AUTH_API_BASE_PATH: '/auth'
+    API_DOMAIN: 'http://api.tum-ai-dev.com:15950'
+    AUTH_WEBSITE_BASE_PATH: '/auth'
+    AUTH_WEBSITE_DOMAIN: 'http://auth.tum-ai-dev.com:15950'
+    AUTH_CORE_INSTANCE: 'http://super.tokens:3567'
+    AUTH_ALLOWED_ORIGINS:
+        # Should contain AUTH_WEBSITE_DOMAIN
+        # TODO: make reference to AUTH_WEBSITE_DOMAIN
+        - 'http://space.tum-ai-dev.com:15950'
+        - 'http://space.tum-ai-dev.com:3000'
+        - 'http://auth.tum-ai-dev.com:15950'
+        - 'http://auth.tum-ai-dev.com:3000'
+        - 'http://localhost:3000'
+    USERS_DASHBOARD_API_KEY: 'someApiKey'
 #-------------------------------------------------------------------------------#
 MONGODB:
-  MONGODB_HOST: "mongo.db"
-  MONGODB_PORT: "27017"
+    MONGODB_HOST: 'mongo.db'
+    MONGODB_PORT: '27017'
 #-------------------------------------------------------------------------------#
 LOGGER:
-  LOGGER_NAME: "tumai-space-global"
-  LOG_LEVEL: "DEBUG"
+    LOGGER_NAME: 'tumai-space-global'
+    LOG_LEVEL: 'DEBUG'
 #-------------------------------------------------------------------------------#
 # API:
