--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"axios": "^1.2.1",
+		"axios": "^1.3.4",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
 		"mobx": "^6.7.0",
@@ -17,7 +17,9 @@
 		"next": "13.0.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-icons": "^4.7.1"
+		"react-icons": "^4.7.1",
+		"supertokens-auth-react": "^0.31.1",
+		"supertokens-web-js": "^0.5.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
