--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+auth-web-app-old
