--- a/auth-web-app/package.json
+++ b/auth-web-app/package.json
@@ -6,16 +6,15 @@
         "start": "next start"
     },
     "dependencies": {
-        "next": "^13.1.1",
+        "next": "latest",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "supertokens-auth-react": "^0.30.2",
-        "supertokens-node": "^12.1.5",
-        "supertokens-web-js": "^0.4.0"
+        "supertokens-auth-react": "latest",
+        "supertokens-node": "latest"
     },
     "devDependencies": {
-        "@types/node": "18.7.13",
         "@types/react": "18.0.17",
+        "@types/node": "18.7.13",
         "typescript": "^4.8.2"
     }
 }
