--- a/api/config.yaml
+++ b/api/config.yaml
@@ -10,7 +10,7 @@ AUTH:
     API_DOMAIN: 'http://api.tum-ai-dev.com:15950'
     AUTH_WEBSITE_BASE_PATH: '/auth'
     AUTH_WEBSITE_DOMAIN: 'http://auth.tum-ai-dev.com:15950'
-    AUTH_CORE_INSTANCE: 'http://super.tokens:3567'
+    AUTH_CORE_INSTANCE: 'http://localhost:3567'
     AUTH_ALLOWED_ORIGINS:
         # Should contain AUTH_WEBSITE_DOMAIN
         # TODO: make reference to AUTH_WEBSITE_DOMAIN
@@ -19,6 +19,7 @@ AUTH:
         - 'http://auth.tum-ai-dev.com:15950'
         - 'http://auth.tum-ai-dev.com:3000'
         - 'http://localhost:3000'
+        - 'http://localhost:3001'
     USERS_DASHBOARD_API_KEY: 'someApiKey'
 #-------------------------------------------------------------------------------#
 MONGODB:
