20 connect frontend to profileservice api (#39)
* implement member page

* fix NavBar routes

* install supertokens on frontend

* add axios with env api host, fetch batch profiles and individual profile, enhance UI

* improve UI, add dark mode, add remaining profile fields

* UI

* indicate current route

* add search and sort

* fix html dark bg

* fix auth, connect auth with API and webapp

* sticky navbar

* add DB config to setup, add env variables for auth server

* configure Docker

* npm i, fix paths

* add envs to webapp

* import fix + signout fix

* add logo, add my profile, fix api /profile/me

* fix 307

---------

Co-authored-by: Robin Holzinger <nerotycs@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+auth-web-app-old
+.reverse/.acme/acme-tum-ai.json
