--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,7 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"axios": "^1.2.1",
+		"axios": "^1.3.4",
 		"eslint": "8.29.0",
 		"eslint-config-next": "13.0.6",
 		"mobx": "^6.7.0",
@@ -17,11 +17,14 @@
 		"next": "^13.2.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.7.1"
+		"react-icons": "^4.7.1",
+		"supertokens-auth-react": "^0.31.1",
+		"supertokens-web-js": "^0.5.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.19",
-		"tailwindcss": "^3.2.4"
+		"tailwindcss": "^3.2.4",
+		"webpack": "^5.75.0"
 	}
 }
