--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
         environment:
             ME_CONFIG_MONGODB_ADMINUSERNAME: 'admin'
             ME_CONFIG_MONGODB_ADMINPASSWORD: 'password'
-            ME_CONFIG_MONGODB_URL: 'mongodb://admin:password@mongodb:27017/'
+            ME_CONFIG_MONGODB_URL: 'mongodb://admin:password@mongo.db:27017/'
         networks:
             - db-net
 
