refine github actions

--- a/.github/workflows/azure-api-merge.yml
+++ b/.github/workflows/azure-api-merge.yml
@@ -2,10 +2,12 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - tumai-space-api
+name: Build & deploy Python api to Azure Web App - tumai-space-api (PROD)
 
 on:
   push:
+    paths:
+    - 'api/**'
     branches:
       - main
   workflow_dispatch:
@@ -23,11 +25,13 @@ jobs:
           python-version: '3.11'
 
       - name: Create and start virtual environment
+        working-directory: ./api
         run: |
           python -m venv venv
           source venv/bin/activate
       
       - name: Install dependencies
+        working-directory: ./api
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
