fix ci/linting for app

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -23,3 +23,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TUMAI_SPACE }}'
           channelId: live
           projectId: tumai-space
+          entryPoint: ./app
