--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,10 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     name: Python Linting
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Check Python Formatting
         uses: psf/black@stable
         with:
           options: "--check --verbose"
           src: "./api"
+      - name: Install JS/TS Modules
+        working-directory: ./web-app
+        run: yarn 
+      - name: Check JS/TS Formatting
+        working-directory: ./web-app
+        run: yarn run eslint . --config=.eslintrc.json  --ext .js,.jsx,.ts,.tsx
