web-app linting fix & ci changes

--- a/.github/workflows/jsts-lint.yml
+++ b/.github/workflows/jsts-lint.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Install JS/TS Modules
         working-directory: ./web-app
-        run: yarn 
+        run: npm i 
       - name: Check JS/TS Formatting
         working-directory: ./web-app
-        run: yarn run eslint . --config=.eslintrc.json --ext .js,.jsx,.ts,.tsx
+        run: npm run lint
