--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,7 +10,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.3.4",
-		"eslint": "8.29.0",
+		"eslint": "^8.29.0",
 		"eslint-config-next": "13.0.6",
 		"mobx": "^6.7.0",
 		"mobx-react": "^7.6.0",
