--- a/.github/workflows/app-main-merge.yml
+++ b/.github/workflows/app-main-merge.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   build_and_deploy:
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
