--- a/.github/workflows/app-staging-pull-request.yml
+++ b/.github/workflows/app-staging-pull-request.yml
@@ -22,5 +22,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TUMAI_SPACE }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TUMAI_SPACE_STAGING }}'
+          channelId: live
           projectId: tumai-space-staging
+          entryPoint: ./app
