--- a/.github/workflows/api-all-push-commit.yml
+++ b/.github/workflows/api-all-push-commit.yml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: "3.10"
 
       - name: Install dependencies
         run: pip install -r api/requirements.txt
@@ -33,5 +33,4 @@ jobs:
           src: "./api"
 
       - name: Run pytest
-        working-directory: ./app
-        run: pytest
+        run: PYTHONPATH=/home/runner/work/space/space/api pytest
