--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,17 @@
 # Requirements for the FastAPI server and services
 # python 3.10
 
+# linting
+black
+isort
+flake8
+mypy
+typing_extensions
+
+# testing
+pytest
+
+# run
 fastapi~=0.88.0
 motor==3.1.1
 pydantic==1.10.4
@@ -18,4 +29,3 @@ psycopg2-binary
 sqlalchemy
 sqlalchemy-utils
 firebase-admin
-pytest
