--- a/.github/workflows/app-main-merge.yml
+++ b/.github/workflows/app-main-merge.yml
@@ -19,6 +19,9 @@ jobs:
       - name: CI & Build
         working-directory: ./app
         run: npm ci && npm run build
+      - name: Run Tests
+        working-directory: ./app
+        run: npm test
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
